test/tests/nek_errors/invalid_transfer_pp/cube.oudf
void udfDirichlet(bcData *bc)
{
  bc->uxFluid = 0.1;
  bc->uyFluid = 0.0;
  bc->uzFluid = 0.0;
}

void udfDirichlet(bcData *bc)
{
  if (bc->id == 6)
    bc->sScalar = 600.0;
}

void udfNeumann(bcData *bc)
{
  // note: when running with Cardinal, Cardinal will allocate the usrwrk
  // array. If running with NekRS standalone (e.g. nrsmpi), you need to
  // replace the usrwrk with some other value or allocate it youself from
  // the udf and populate it with values.
  if (bc->id == 4)
    bc->fluxScalar = bc->usrwrk[bc->idM];
}
